# print-service

./: .gitignore  .pre-commit-config.yaml  README.md  celeryWorker.bat  insight.py  pyproject.toml
core/: celery.py  settings.py  urls.py
print/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
print/migrations/: 0001_initial.py  0002_alter_printer_labelapp_alter_printer_labelid.py  0003_label_labeltype.py  0004_alter_printer_labelid_alter_label_labelid_and_more.py  0005_label_app_remove_printer_labelapp_and_more.py  0006_rename_zpl_label_zpl_text.py  0007_alter_printer_label_id.py  0008_alter_printer_name.py  0009_alter_label_label_id_alter_label_label_type.py  0010_alter_label_label_type_alter_label_app_mask_app_and_more.py
print/tests/: test_printer_crud.py  test_updates.py
